# COMRADE

./: README.md
avr/2313/CVS/: Repository
avr/2313/dcmotor/: Readme
avr/2313/dcmotor/CVS/: Entries  Repository
avr/2313/dcmotor/src/: init.c  init.h  main.c  motor.c  motor.h
avr/2313/dcmotor/src/CVS/: Entries  Repository
avr/2313/dcmotor/src/objdump/: .cvsignore  burn  compile
avr/2313/dcmotor/src/objdump/CVS/: Repository
avr/2313/stepper/CVS/: Entries  Repository
avr/2313/stepper/src/: init.c  main.c  motor.c  motor.h
avr/2313/stepper/src/CVS/: Entries  Repository
avr/2313/stepper/src/objdump/: burn  compile
avr/2313/stepper/src/objdump/CVS/: Entries  Repository
avr/CVS/: Entries  Root
avr/mega/: the return of the comrades.txt
avr/mega/CVS/: Entries  Repository
comrade-main/: .cvsignore  configure.in
comrade-main/CVS/: Entries  Repository
comrade-main/src/: .cvsignore  AbstractHardware.cpp  AbstractHardware.h  ArgDecs.cpp  ArgDecs.h  ByteObjectConvertor.cpp  ByteObjectConvertor.h  CircularBuffer.cpp  CircularBuffer.h  CommandBinder.cpp  CommandBinder.h  CommandFunctionList.cpp  CommandFunctionList.h  ComradeFrontEnd.cpp  ComradeFrontEnd.h  Dependency.cpp  Dependency.h  ExecutionEngine.cpp  ExecutionEngine.h  Feature.cpp  Feature.h  FeatureList.cpp  FeatureList.h  FrontEnd.cpp  FrontEnd.h  GridDrawingArea.cpp  GridDrawingArea.h  Interpreter.cpp  Interpreter.h  LineFollower.cpp  LineFollower.h  LocalGUI.cpp  LocalGUI.h  LocalisationEngine.cpp  LocalisationEngine.h  MainWindow.cpp  MainWindow.h  Makefile.am  MotorController.cpp  MotorController.h  (+14 more)
comrade-main/src/CVS/: Entries  Repository
comrade-main/ui/: mainwindow.glade
comrade-main/ui/CVS/: Entries  Repository
corelib/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  bootstrap  configure.in  corelib.pc.in
corelib/CVS/: Entries
corelib/docs/: Doxyfile
corelib/docs/CVS/: Entries  Repository
corelib/src/: .cvsignore  CIRC.cc  CIRC.hh  Configurator.cc  Configurator.hh  Constants.hh  CorelibObject.cc  CorelibObject.hh  EvidenceGrid.cc  EvidenceGrid.hh  Frame.cc  Frame.hh  FrameCache.cc  FrameCache.hh  Framer.cc  Framer.hh  Logger.cc  Logger.hh  Makefile.am  MouseOdometer.cc  MouseOdometer.hh  Multicaster.cc  Multicaster.hh  ParallelPort.cc  ParallelPort.hh  ParallelRobot.cc  ParallelRobot.hh  RobotInterface.cc  RobotInterface.hh  RobotList.cc  RobotList.hh  SectorDraw.cc  SerialHandler.cc  SerialHandler.hh  SerialInstructions.hh  SerialRobotInterface.cc  SerialRobotInterface.hh  Singleton.hh
corelib/src/CVS/: Entries  Repository
iris/: .cvsignore  Makefile.am  bootstrap  configure.in  iris.pc.in
iris/CVS/: Entries
iris/src/: .cvsignore  ActivationFunctions.cpp  ActivationFunctions.h  AutomataEdge.cpp  AutomataEdge.h  AutomataSkeleton.cpp  AutomataSkeleton.h  BitmapStreamer.cpp  BitmapStreamer.h  Buffer.cpp  Buffer.h  BufferConvertor.cpp  BufferConvertor.h  ByteStreamer.cpp  ByteStreamer.h  ColorFilter.cpp  ColorFilter.h  ColorSpaces.cpp  ColorSpaces.h  Correlator.cpp  Correlator.h  EdgeDetectors.cpp  EdgeDetectors.h  EpipolarRectifier.cpp  EpipolarRectifier.h  GenericSOM_Neuron.cpp  GenericSOM_Neuron.h  HoughTransform.cpp  HoughTransform.h  IoRedir.cpp  IoRedir.h  IrisEnv.cpp  IrisEnv.h  KernelMatrix.cpp  KernelMatrix.h  Makefile.am  Matrix4x4.cpp  Matrix4x4.h  MiscRoutines.cpp  MiscRoutines.h  (+43 more)
iris/src/CVS/: Entries  Repository
libfg/: .cvsignore  Makefile  capture.h  frame.h
libfg/CVS/: Entries  Repository
remotecomrade/: Makefile.in  README  SectorDraw.hh  bootstrap  config.h.in  configure.in  corelib.pws  remotecomrade.prj  remotecomrade.prj.bak
remotecomrade/CVS/: Entries  Repository
remotecomrade/src/: CameraDA.cc  CameraDA.hh  CompassDA.cc  CompassDA.hh  Constants.hh  GLDrawingArea.cc  GLDrawingArea.hh  GridDrawingArea.cc  GridDrawingArea.hh  MainWindow.cc  MainWindow.hh  Makefile.am  Makefile.in  MapUpdater.cc  MapUpdater.hh  MouseDriveDA.cc  MouseDriveDA.hh  TODO  adam.cc  adam.h  comrade.c  comrade.xml  dl  gui_shared_data.cc  gui_shared_data.h  main.cc  model.cc  model.h  model_parts.cc  model_parts.h  texture.h  view3d.cc  view3d.hh
remotecomrade/src/CVS/: Entries  Repository
remotecomrade/ui/: mainwindow.glade  mainwindow.glade.bak  mainwindow.gladep.bak  mainwindow.works  ui2.glade  ui2.glade.bak  ui2.gladep
remotecomrade/ui/CVS/: Entries  Repository
