#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([comrade-iris],[0.1],[bugs@project-comrade.org])
AC_CONFIG_SRCDIR([src/Buffer.cpp])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
#AC_CONFIG_HEADER([config.h])

AC_LANG([C++])

# Checks for programs.
AC_PROG_CXX
#LT_INIT()
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/ioctl.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_CHECK_FUNCS([pow sqrt strdup])

CFLAGS="-Wall"
CXXFLAGS="-Wall"

AC_CONFIG_FILES([
Makefile
iris.pc
src/Makefile
])
AC_OUTPUT
