INCLUDES = -I$(top_srcdir)/src

libirisdir = $(includedir)/iris

libiris_HEADERS = ActivationFunctions.h EdgeDetectors.h NonkernelAlgorithms.h StereoVision.h AutomataEdge.h EpipolarRectifier.h OpticalFlowEngine.h Vert3D.h AutomataSkeleton.h GenericSOM_Neuron.h QuadtreeCore.h Voxel.h BitmapStreamer.h HoughTransform.h QuadtreeSegmenter.h WorldBuilder.h Buffer.h IrisEnv.h RuntimePool.h WorldSpace.h BufferConvertor.h KernelMatrix.h SOM_Trainer.h capture.h ByteStreamer.h Matrix4x4.h Sensor3D.h frame.h ColorFilter.h MiscRoutines.h SequenceAnalyser.h libfg_cpp.h ColorSpaces.h ModelBuilder.h ShapeSampler.h newmath.h Correlator.h NeuronMap.h SpecialKernels.h SystemDefs.h IoRedir.h

lib_LTLIBRARIES     = libiris.la
libiris_la_SOURCES = ActivationFunctions.cpp AutomataEdge.cpp AutomataSkeleton.cpp BitmapStreamer.cpp Buffer.cpp BufferConvertor.cpp ByteStreamer.cpp ColorFilter.cpp ColorSpaces.cpp Correlator.cpp EdgeDetectors.cpp EpipolarRectifier.cpp GenericSOM_Neuron.cpp HoughTransform.cpp IoRedir.cpp IrisEnv.cpp KernelMatrix.cpp Matrix4x4.cpp MiscRoutines.cpp ModelBuilder.cpp NeuronMap.cpp NonkernelAlgorithms.cpp OpticalFlowEngine.cpp QuadtreeCore.cpp QuadtreeSegmenter.cpp RuntimePool.cpp SOM_Trainer.cpp Sensor3D.cpp SequenceAnalyser.cpp ShapeSampler.cpp SpecialKernels.cpp StereoVision.cpp SystemDefs.cpp Vert3D.cpp Voxel.cpp WorldBuilder.cpp WorldSpace.cpp capture.cpp frame.cpp newmath.cpp
